# pan-os-upgrade

./: .env  .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  _config.yml  assurance.py  mkdocs.yml  pull_request_template.md  pyproject.toml  pytest.ini  requirements.txt  test_upgrade.py  upgrade.py
.github/workflows/: container-build-publish.yml  mkdocs-gh-pages.yml  pytest-on-pr.yml
.trunk/: trunk.yaml
docker/: Dockerfile  requirements.txt  settings.yaml
docs/: index.md  test.md
docs/about/: contributing.md  license.md  release-notes.md
docs/css/: custom.css
docs/js/: custom.js
docs/user-guide/: configuration.md  execution.md  getting-started.md  introduction.md  troubleshooting.md
docs/user-guide/docker/: execution.md  getting-started.md  troubleshooting.md
docs/user-guide/python/: execution.md  getting-started.md  troubleshooting.md
models/: __init__.py  assurance_report.py  devices.py  mixins.py  routes.py
pan_os_upgrade/: assurance.py  device.py  ha.py  main.py  upgrade.py  utilities.py
pan_os_upgrade/components/: assurance.py  device.py  ha.py  upgrade.py  utilities.py  utility.py
pan_os_upgrade/models/: __init__.py  arp_table.py  assurance_report.py  content_version.py  devices.py  ip_sec_tunnel.py  license.py  mixins.py  nics.py  session_stats.py
tests/: test_backup_configuration.py  test_check_readiness_and_log.py  test_compare_versions.py  test_configure_logging.py  test_connect_to_host.py  test_console_welcome_banner.py  test_create_firewall_mapping.py  test_determine_upgrade.py  test_ensure_directory_exists.py  test_filter_string_to_dict.py  test_find_close_matches.py  test_flatten_xml_to_dict.py  test_generate_diff_report_diff.py  test_get_emoji.py  test_get_firewalls_from_panorama.py  test_get_ha_status.py  test_get_managed_devices.py  test_ha_sync_check_firewall.py  test_ha_sync_check_panorama.py  test_handle_firewall_ha.py  test_handle_panorama_ha.py  test_ip_callback.py  test_model_from_api_response.py  test_parse_version.py  test_perform_readiness_checks.py  test_perform_reboot.py  test_resolve_hostname.py  test_upgrade.py
