[tool.poetry]
name = "pan-os-upgrade"
version = "0.4.2"
description = "Python script to automate the upgrade process of PAN-OS firewalls."
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{ include = "pan_os_upgrade" }]

[tool.poetry.dependencies]
python = "^3.11"
pan-os-python = "^1.11.0"
panos-upgrade-assurance = "^0.3.1"
pydantic = "^2.5.3"
typer = { extras = ["all"], version = "^0.9.0" }
setuptools = "^69.0.3"
dnspython = "^2.5.0"
dynaconf = "^3.2.4"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
ipdb = "^0.13.13"
mkdocs-material = "^9.5.4"
mkdocstrings = "^0.24.0"
pytest = "^7.4.4"

[tool.poetry.scripts]
pan-os-upgrade = 'pan_os_upgrade.upgrade:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
